// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL Subscriptions should throw an error if the result has errors on it 1`] = `
ApolloError {
  "cause": Object {
    "locations": Array [
      Object {
        "column": 3,
        "line": 2,
      },
    ],
    "message": "This is an error",
    "path": Array [
      "result",
    ],
  },
  "clientErrors": Array [],
  "extraInfo": undefined,
  "graphQLErrors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "This is an error",
      "path": Array [
        "result",
      ],
    },
  ],
  "message": "This is an error",
  "name": "ApolloError",
  "networkError": null,
  "protocolErrors": Array [],
}
`;

exports[`GraphQL Subscriptions should throw an error if the result has protocolErrors on it 1`] = `
ApolloError {
  "cause": Object {
    "extensions": Array [
      Object {
        "code": "WEBSOCKET_MESSAGE_ERROR",
      },
    ],
    "message": "cannot read message from websocket",
  },
  "clientErrors": Array [],
  "extraInfo": undefined,
  "graphQLErrors": Array [],
  "message": "cannot read message from websocket",
  "name": "ApolloError",
  "networkError": null,
  "protocolErrors": Array [
    Object {
      "extensions": Array [
        Object {
          "code": "WEBSOCKET_MESSAGE_ERROR",
        },
      ],
      "message": "cannot read message from websocket",
    },
  ],
}
`;
